[tool.poetry]
name = "pyflux"
version = "0.1.0"
description = ""
authors = ["Ryan D. Guild <rdg27@pitt.edu>"]
license = "MIT"
packages = [{include = "flux-store", from = "./packages"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
